--- a/website/index.htm
+++ b/website/index.htm
@@ -44,13 +44,12 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.htm">Archives</a></li>
-        <li><a href="tournament.htm">Tournaments</a></li>
-        <li><a href="ruleset.htm">Ruleset</a></li>
-        <li><a href="onlineGaming.htm">Online Gaming</a></li>
+        <li><a href="">Tournaments</a></li>
+        <li><a href="">Ruleset</a></li>
+        <li><a href="">Online Gaming</a></li>
         <li><a href="https://magnusdurr.github.io/snapfire/war/indexEAA.html">Army Builder</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-
       </ul>
     </div>
   </div>
@@ -67,15 +66,15 @@
   <div class="row">
     <div class="col-sm-2">
       <img src="img/Scenario_Battle.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Battle Line</p>
+      <a href="">Battle Line</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Scenario_Fog.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Fog of War</p>
+      <a href="">Fog of War</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Scenario_Beacons.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Fire the Beacons</p>
+      <a href="">Fire the Beacons</a>
     </div>
   </div>
   <hr>
@@ -87,63 +86,67 @@
   <div class="row">
     <div class="col-sm-2">
       <img src="img/AdeptusAstartes_Codex.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Adeptus Astertes<br>Codex Astartes</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=SM&list=codexastartes">Adeptus Astertes<br>Codex Astartes</a>
     </div>
     <div class="col-sm-2">
       <img src="img/AdeptusAstartes_Hands.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Adeptus Astertes<br>Iron Hands</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=SM&list=ironhands">Adeptus Astertes<br>Iron Hands</a>
     </div>
     <div class="col-sm-2">
       <img src="img/AdeptusAstartes_Raven.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Adeptus Astartes<br>Raven Guard</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=SM&list=ravenguard">Adeptus Astartes<br>Raven Guard</a>
     </div>
     <div class="col-sm-2">
       <img src="img/AdeptusAstartes_White.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Adeptus Astartes<br>White Scars</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=SM&list=whitescars">Adeptus Astartes<br>White Scars</a>
     </div>
     <div class="col-sm-2">
       <img src="img/AdeptusMechanicus_Fleet.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Adeptus Mechanicus<br>Explorator Fleet</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=AM&list=exploratorFleet">Adeptus Mechanicus<br>Explorator Fleet</a>
     </div>
     <div class="col-sm-2">
-      <img src="img/AdeptusMechanicus_Skitarii.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Adeptus Mechanicus<br>Skitarii</p>
+      <img src="img/AdeptusMechanicus_Questoris.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=AM&list=knightworld">Adeptus Mechanicus<br>Knight World</a>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
       <img src="img/AdeptusMechanicus_Questoris.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Adeptus Mechanicus<br>Questoris Mechanicus</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=AM&list=questorismechanicus">Adeptus Mechanicus<br>Questoris Mechanicus</a>
+    </div>
+    <div class="col-sm-2">
+      <img src="img/AdeptusMechanicus_Skitarii.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=AM&list=skitarii">Adeptus Mechanicus<br>Skitarii</a>
     </div>
     <div class="col-sm-2">
       <img src="img/AdeptusMechanicus_Titan.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Adeptus Mechanicus<br>Titan Legion</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=AM&list=amtl">Adeptus Mechanicus<br>Titan Legion</a>
     </div>
     <div class="col-sm-2">
       <img src="img/AstraMilitarum_Baran.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Astra Militarum<br>Baran Siegemasters</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=barans">Astra Militarum<br>Baran Siegemasters</a>
     </div>
     <div class="col-sm-2">
       <img src="img/AstraMilitarum_Cadian.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Astra Militarum<br>Cadian Shock Troops</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=cadianshocktroops">Astra Militarum<br>Cadian Shock Troops</a>
     </div>
     <div class="col-sm-2">
       <img src="img/AstraMilitarum_Catachan.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Astra Militarum<br>Catachan Death World</p>
-    </div>
-    <div class="col-sm-2">
-      <img src="img/AstraMilitarum_Korps.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Astra Militarum<br>Death Korps of Krieg</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=catachandeathworld">Astra Militarum<br>Catachan Death World</a>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
+      <img src="img/AstraMilitarum_Korps.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=deathkorps">Astra Militarum<br>Death Korps of Krieg</a>
+    </div>
+    <div class="col-sm-2">
       <img src="img/AstraMilitarum_Steel.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Astra Militarum<br>Steel Legion</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=steellegion">Astra Militarum<br>Steel Legion</a>
     </div>
     <div class="col-sm-2">
       <img src="img/AstraMilitarum_Elysian.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Astra Militarum<br>Elysian Drop Troops</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=elysiandroptroops">Astra Militarum<br>Elysian Drop Troops</a>
     </div>
   </div>
 
@@ -207,86 +210,87 @@
   <div class="row">
     <div class="col-sm-2">
       <img src="img/DarkEldar_Bladed.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Dark Eldar<br>Kabal of the Bladed Lotus</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=DE&list=kabalofthebladedlotus">Dark Eldar<br>Kabal of the Bladed Lotus</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Eldar_BielTan.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Eldar<br>Biel-Tan</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=EL&list=bieltan">Eldar<br>Biel-Tan</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Eldar_Iyanden.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Eldar<br>Iyanden</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=EL&list=iyanden">Eldar<br>Iyanden</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Eldar_SaimHann.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Eldar<br>Saim-Hann</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=EL&list=saimhann">Eldar<br>Saim-Hann</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Eldar_Ulthwe.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Eldar<br>Ulthwé</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=EL&list=ulthwe">Eldar<br>Ulthwé</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Eldar_Titan.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Eldar<br>Titan Force</p>    </div>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=EL&list=titanforce">Eldar<br>Titan Force</a>    </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
       <img src="img/Harlequin_Veiled.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Harlequins<br>Masque of the Veiled Path</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=HQ&list=masqueoftheveiledpath">Harlequins<br>Masque of the Veiled Path</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Harlequin_Sorrow.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Harlequins<br>Masque of the Midnight Sorrow</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=HQ&list=masqueofthemidnightsorrow">Harlequins<br>Masque of the Midnight Sorrow</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Genstealer_FourArm.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Genestealer Cult<br>Cult of the Four Armed Emperor</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=GS&list=cultofthefourarmedemperor">Genestealer Cult<br>Cult of the Four Armed Emperor</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Inquisition_Sisters.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Imperial Inquisition<br>Adepta Sororitas</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=IQ&list=adeptasororitas">Imperial Inquisition<br>Adepta Sororitas</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Necron_Maynarkh.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Necrons<br>Maynarkh Dynasty</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=NC&list=maynarkhdynasty">Necrons<br>Maynarkh Dynasty</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Necron_Sautekh.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Necrons<br>Sautekh Dynasty</p>    </div>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=NC&list=sautekhdynasty">Necrons<br>Sautekh Dynasty</a>
+    </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
       <img src="img/Ork_Goffs.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Orks<br>Clan Goffs Warhorde</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=O&list=goffsclan">Orks<br>Clan Goffs Warhorde</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Ork_Gargant.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Orks<br>Evil Sunz Gargant Big Mob</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=O&list=gargants">Orks<br>Evil Sunz Gargant Big Mob</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Ork_EvilSun.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Orks<br>Evil Sunz Speed Freeks</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=O&list=speedfreeks">Orks<br>Evil Sunz Speed Freeks</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Ork_Snakebite.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Orks<br>Snakebite Clan</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=O&list=snakebiteclan">Orks<br>Snakebite Clan</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Tau_Kelshan.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Tau<br>Ke'lshan</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=TAU&list=kelshan">Tau<br>Ke'lshan</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Tau_Sacea.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Tau<br>Sa’ Cea</p>    </div>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=TAU&list=sacea">Tau<br>Sa’ Cea</a>    </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
       <img src="img/Tau_Viorla.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Tau<br>Violra</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=TAU&list=viorla">Tau<br>Violra</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Tyranid_Dagon.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Tyranids<br>Hive Fleet Dagon</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=NID&list=dagon">Tyranids<br>Hive Fleet Dagon</a>
     </div>
   </div>
 </div>
