--- a/website/index.htm
+++ b/website/index.htm
@@ -210,7 +210,7 @@
   <div class="row">
     <div class="col-sm-2">
       <img src="img/DarkEldar_Bladed.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <a href="https://magnusdurr.github.io/list-view/index.html?race=DE&list=kabalofthebladedlotus">Dark Eldar<br>Kabal of the Bladed Lotus</a>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=DE&list=kabaloftheblackheart">Dark Eldar<br>Kabal of the Black Heart</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Eldar_BielTan.jpg" class="img-responsive" style="width:100%" alt="Image">
