--- a/website/index.htm
+++ b/website/index.htm
@@ -66,15 +66,15 @@
   <div class="row">
     <div class="col-sm-2">
       <img src="img/Scenario_Battle.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <a href="">Battle Line</a>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=Scenario&list=battleline">Battle Line</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Scenario_Fog.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <a href="">Fog of War</a>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=Scenario&list=fogofwar">Fog of War</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Scenario_Beacons.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <a href="">Fire the Beacons</a>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=Scenario&list=firethebeacons">Fire the Beacons</a>
     </div>
   </div>
   <hr>
