--- a/website/index.htm
+++ b/website/index.htm
@@ -281,12 +281,12 @@
     </div>
     <div class="col-sm-2">
       <img src="img/Tau_Sacea.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <a href="https://magnusdurr.github.io/list-view/index.html?race=TAU&list=sacea">Tau<br>Sa’ Cea</a>    </div>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=TAU&list=sacea">Tau<br>Sa’Cea</a>    </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
       <img src="img/Tau_Viorla.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <a href="https://magnusdurr.github.io/list-view/index.html?race=TAU&list=viorla">Tau<br>Violra</a>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=TAU&list=viorla">Tau<br>Vior’la</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Tyranid_Dagon.jpg" class="img-responsive" style="width:100%" alt="Image">
