--- a/website/index.htm
+++ b/website/index.htm
@@ -31,6 +31,7 @@
 
 <div class="text-right">
 
+
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -44,6 +45,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.htm">Archives</a></li>
+        <li><a href="liststatus.htm">List Status</a></li>
         <li><a href="">Tournaments</a></li>
         <li><a href="">Ruleset</a></li>
         <li><a href="">Online Gaming</a></li>
