Added Mymeara to index, eldar special rules tweaks

--- a/website/index.htm
+++ b/website/index.htm
@@ -232,7 +232,7 @@
     </div>
     <div class="col-sm-2">
       <img src="img/Eldar_Titan.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <a href="https://magnusdurr.github.io/list-view/index.html?race=EL&list=titanforce">Eldar<br>Titan Force</a>    </div>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=EL&list=titanforce">Eldar<br>Eldar Titan Force</a>    </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
