--- a/website/liststatus.htm
+++ b/website/liststatus.htm
@@ -446,7 +446,7 @@
 		</tr>
 		<tr class="auto-style3">
 			<td class="style7" style="width: 184px"><strong>Eldar</strong></td>
-			<td class="style12" style="width: 228px">Biel Tan</td>
+			<td class="style12" style="width: 228px">Biel-Tan</td>
 			<td class="style7" style="width: 42px">1.07</td>
 			<td class="style6" style="width: 77px">&nbsp;</td>
 			<td class="style11" style="width: 96px">2</td>
@@ -486,7 +486,7 @@
 		</tr>
 		<tr class="auto-style3">
 			<td class="style7" style="width: 184px"><strong></strong></td>
-			<td class="style10" style="width: 228px">Titan Force</td>
+			<td class="style10" style="width: 228px">Eldar Titan Force</td>
 			<td class="style7" style="width: 42px">&nbsp;</td>
 			<td class="style9" style="width: 77px">&nbsp;</td>
 			<td class="style6" style="width: 96px">&nbsp;</td>
