--- a/website/index.htm
+++ b/website/index.htm
@@ -69,7 +69,7 @@
   <strong>Alpha:</strong> New list with non or limited testing.</br>
   <strong>Beta:</strong> Had a decent amount of play testing without any trouble.</br>
   <strong>Gold:</strong> Ready for games at a balanced level.</br>
-  <strong>Platinum:</strong> Approved and agreed balanced by the wider community.</br>
+  <strong>Approved:</strong> Approved and agreed balanced by the wider community.</br>
 </div>
 
 <div class="container text-center">
