--- a/website/index.htm
+++ b/website/index.htm
@@ -65,7 +65,7 @@
 
 <div class="container text-center">
   <h3>Development</h3>
-  These lists and scnearios are still works in progress. Each list will be marked with an level of development as followed.</br>
+  These lists and scenarios are still works in progress. Each list will be marked with an level of development as followed.</br>
   <strong>Alpha:</strong> New list with non or limited testing.</br>
   <strong>Beta:</strong> Had a decent amount of play testing without any trouble.</br>
   <strong>Gold:</strong> Ready for games at a balanced level.</br>
