--- a/website/archives.htm
+++ b/website/archives.htm
@@ -40,12 +40,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">EA-Apocalypse</a>
+      <a class="navbar-brand" href="index.htm">EA-Apocalypse</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.htm">Archives</a></li>
-
+        <li class="active"><a href="archives.htm">Archives</a></li>
+        <li><a href="archives(Mobile).htm">Archives (Mobile)</a></li>
         <li><a href="">Tournaments</a></li>
         <li><a href="">Ruleset</a></li>
         <li><a href="">Online Gaming</a></li>
