--- a/website/index.htm
+++ b/website/index.htm
@@ -45,6 +45,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="archives.htm">Archives</a></li>
+        <li><a href="archives(Mobile).htm">Archives (Mobile)</a></li>
         <li><a href="">Tournaments</a></li>
         <li><a href="">Ruleset</a></li>
         <li><a href="">Online Gaming</a></li>
@@ -65,33 +66,22 @@
 <div class="container text-center" style="text-align: center">
   <h3>EA - Apocalypse</h3>
   <div class="text-left">
-  </br>Welcome to the Fan Based website for  EA - Apocalypse.
-  </br></br>On these pages you will find fan based lists developed by the EA-Apocalypse team. Alot of list foundations and ideas are credit to the netEA group, Epic-UK group and the F-ERC group. We have done these list because we really enjoy the game and list development. We hope we have created a fresh new vibe on the game and we aim for some fun gaming sessions. 
-  </br>
-  </br>These list are still in Development and some may not be ready for a balanced game. We have marked lists where we feel they are at within the development for ease of creating a fun game. We also invite you to comment/bring ideas to the table through our Dicord channel we have set up. With epic being out of production for many years now, our gaming friends are far and wide for us. We play alot of games online and invite you to also join in on games through the discord channel. We will be setting up a online gaming page with tutorials and links to play games via Table Top Simulator. This software is availible on steam for a few dollars.
+  <br>Welcome to the Fan Based website for  EA - Apocalypse.
+  <br><br>On these pages you will find fan based lists developed by the EA-Apocalypse team. Alot of list foundations and ideas are credit to the netEA group, Epic-UK group and the F-ERC group. We have done these list because we really enjoy the game and list development. We hope we have created a fresh new vibe on the game and we aim for some fun gaming sessions. 
+  <br>
+  <br>These list are still in Development and some may not be ready for a balanced game. We have marked lists where we feel they are at within the development for ease of creating a fun game. We also invite you to comment/bring ideas to the table through our Dicord channel we have set up. With epic being out of production for many years now, our gaming friends are far and wide for us. We play alot of games online and invite you to also join in on games through the discord channel. We will be setting up a online gaming page with tutorials and links to play games via Table Top Simulator. This software is availible on steam for a few dollars.
 	<br>
 	<br>
 	<br>
 	</div>
 </div>
 
-<div class="container text-center" style="text-align: center">
-  	<h3><a href="archives.htm">Desktop View</a></h3>
-	<br>
-	<br>
-	<h3><a href="archives(Mobile).htm">Mobile View</a></h3>
-	<br>
-	<br>
-	<br>
-	</div>
 </div>
 
 
 
 <footer class="container-fluid text-center">
-    <p class="text-center">EA Apocalypse<br/>This website is unofficial and in no way endorsed by Games Workshop Limited.</p>
-</div>
-
+    <p class="text-center">EA Apocalypse<br>This website is unofficial and in no way endorsed by Games Workshop Limited.</p>
 </footer>
 
 </div>
