--- a/website/archives.htm
+++ b/website/archives.htm
@@ -48,7 +48,7 @@
         <li><a href="archives(Mobile).htm">Archives (Mobile)</a></li>
         <li><a href="">Tournaments</a></li>
         <li><a href="">Ruleset</a></li>
-        <li><a href="">Online Gaming</a></li>
+        <li><a href="onlineGaming.htm">Online Gaming</a></li>
         <li><a href="https://magnusdurr.github.io/snapfire/war/indexEAA.html">Army Builder</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
