--- a/website/onlineGaming.htm
+++ b/website/onlineGaming.htm
@@ -39,18 +39,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">EA-Apocalypse</a>
+      <a class="navbar-brand" href="index.htm">EA-Apocalypse</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="index.htm">Archives</a></li>
-        <li><a href="tournament.htm">Tournaments</a></li>
-        <li><a href="ruleset.htm">Ruleset</a></li>
+        <li><a href="archives.htm">Archives</a></li>
+        <li><a href="archives(Mobile).htm">Archives (Mobile)</a></li>
+        <li><a href="">Tournaments</a></li>
+        <li><a href="">Ruleset</a></li>
         <li class="active"><a href="onlineGaming.htm">Online Gaming</a></li>
         <li><a href="https://magnusdurr.github.io/snapfire/war/indexEAA.html">Army Builder</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-
       </ul>
     </div>
   </div>
@@ -59,22 +59,78 @@
 <div class="container text-center">
   <br>
   <div class="row">
-      <img src="img/banner.jpg" class="img-responsive" style="width:500%" alt="Image">
+      <img src="img/banner.jpg" class="img-responsive" style="width:100%" alt="Image">
 </div>
-<div class="container text-center">
+<div class="container text-center" style="text-align: left">
   <h3>Online Gaming</h3>
+  <div class="text-left">
   <br>
-  <div class="row">
-    <div class="col-sm-2">
-      <img src="img/Scenario_Battle.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Template</p>
-    </div>
-  <hr>
+  With Epic Armageddon being discontinued for a number of years now, fellow gamers are far and wide. With the era of online interaction and gaming. We can now play tabletop games online. 
+  <br>
+  EA-Apocalypse is available online to play. As EA-Apocalypse is in very early days, this is still in development. Below you shall be able to find Tutorials and links for Tabletop Simulator as they get set up.
+  <br>
+  	<br>
+	<strong>Software</strong><br>
+  	<a href="https://store.steampowered.com/app/286160/Tabletop_Simulator/">Steam</a>
+  <br><a href="https://store.steampowered.com/app/286160/Tabletop_Simulator/">Tabletop Simulator
+	</a>
+  
+  
+	<br>
+	<br>
+	<strong>Workshop Mods (EA-Apocalypse Links)</strong><br>
+	Adeptus Astartes - Codex Astartes<br>
+	Adeptus Astartes - Iron Hands<br>
+	Adeptus Astartes - Raven Guard <br>
+	Adeptus Astartes - White Scars<br>
+	Adeptus Mechanicus - Explorator Fleet<br>
+	Adeptus Mechanicus - Knight World<br>
+	Adeptus Mechanicus - Questoris Mechanicus<br>
+	Adeptus Mechanicus - Skitarii<br>
+	Chaos Space Marines - Black Legion<br>
+	Chaos Space Marines - Death Guard<br>
+	Chaos Space Marines - Emperors Children<br>
+	Chaos Space Marines - Thousand Sons<br>
+	Chaos Space Marines - World Eaters<br>
+	Chaos Space Marines - Alpha Legion <br>
+	Dark Mechanicus - Traitor Titans<br>
+	Chaos Cultists - Lost and the Damned<br>
+	Chaos Cultists - Slaves to Darkness<br>
+	Chaos Cultists - Daemonic Incursion<br>
+	Dark Eldar - Kabal of the Black Heart<br>
+	Eldar - Biel-Tan<br>
+	Eldar - Iyanden<br>
+	Eldar - Saim Hann<br>
+	Eldar - Ulthwe<br>
+	Eldar - Titan Force <br>
+	Harlequins - Masque of the Veiled Path <br>
+	Harlequins - Masque of the Midnight Sorrow<br>
+	Astra Militarum - Baran Siege Masters<br>
+	Astra Militarum - Catachan Death World<br>
+	Astra Militarum - Cadian Shock Troops <br>
+	Astra Militarum - Elysians <br>
+	Astra Militarum - Steel Legion <br>
+	Astra Militarum - Death Korps of Krieg<br>
+	Imperial Inquisition - Adepta Sororitas<br>
+	Orks - Snakebites Clan<br>
+	Orks - Evil Suns Gargant Big Mob <br>
+	Orks - Goffs Clan Warhorde<br>
+	Necron - Maynarkh Dynasty<br>
+	Necron - Sautekh Dynasty<br>
+	Tau - Ke&#39;lshan<br>
+	Tau - Sa&#39;Cae<br>
+	Tau - Vior&#39;la <br>
+	Tyranid - Hive Fleet Dagon<br>
+	Tyranid - Hive Fleet Hydra <br>
+	Genesteeler Cult - Cult of the four armed Emperor<br>
+	</div>
+  
+  
 </div>
-
+</div>
 <footer class="container-fluid text-center">
     <p>EA Apocalypse<br/>This website is unofficial and in no way endorsed by Games Workshop Limited.</p>
-</div>
+
 
 </footer>
 
