--- a/website/archives.htm
+++ b/website/archives.htm
@@ -66,9 +66,9 @@
 <div class="container text-center">
   <h3>Development</h3>
   These lists and scenarios are still works in progress. Each list will be marked with an level of development as followed.</br>
-  <strong>Alpha:</strong> New list with non or limited testing.</br>
-  <strong>Beta:</strong> Had a decent amount of play testing without any trouble.</br>
-  <strong>Gold:</strong> Ready for games at a balanced level.</br>
+  <strong>Alpha:</strong> New list with none or limited testing.</br>
+  <strong>Beta:</strong>Had a some play testing without any trouble.</br>
+  <strong>Gold:</strong>Had a decent ammount of play testing and ready for games at a balanced level. But need games from more groups.</br>
   <strong>Approved:</strong> Approved and agreed balanced by the wider community.</br>
 </div>
 
