--- a/content/armies.html
+++ b/content/armies.html
@@ -1,10 +1,66 @@
+<div class="row">
+    <div class="col">
+        <small>
+            <b>Approved</b> - Tournament ready and balanced against one another<br>
+            <b>Beta</b> - Currently being tested for approval<br>
+            <b>Alpha</b> - New list wo none or limited testing<br>
+            <b>Experimental</b> - An idea for a list that has never been tested
+        </small>
+    </div>
+    <div class="col-2">
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                <span id="list-filter">Filter: </span>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="/content/armies.html?filter=approved">Approved</a>
+                <a class="dropdown-item" href="/content/armies.html?filter=beta">Beta+</a>
+                <a class="dropdown-item" href="/content/armies.html?filter=alpha">Alpha+</a>
+                <a class="dropdown-item" href="/content/armies.html?filter=all">All lists</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
     $(document).ready(function () {
         console.log("[document-ready] initializing armies...");
+
+        var urlSearchParams = new URLSearchParams(new URL('http://localhost' + history.state.url).search);
+        var filter = urlSearchParams.get("filter");
+
+        var states = ['approved'];
+
+        if (filter === 'beta')
+        {
+            states.push('beta');
+        }
+        else if (filter === 'alpha')
+        {
+            states.push('beta');
+            states.push('alpha');
+        }
+        else if (filter === 'all')
+        {
+            states.push('beta');
+            states.push('alpha');
+            states.push('experimental');
+        }
+
+        $("#list-filter").append(filter);
+
         $.getJSON("lists/index2.json", function (data) {
             var filtered = data;
-            filtered.index = filtered.index.filter(item => item.name !== 'Scenario');
-            $("#content").html(eaTemplating.templates['list'](filtered))
+            console.log(data);
+
+            filtered.index.forEach(section =>
+                    section.index.forEach(race => {
+                        race.lists = race.lists.filter(item => states.includes(item.status))
+                    }));
+
+            $("#content").append(eaTemplating.templates['list'](filtered))
         });
     });
 </script>
