--- a/tmp.html
+++ b/tmp.html
@@ -14,7 +14,7 @@
     <script src="script/navigation.js?v=1"></script>
     <script src="script/templating.js?v=1"></script>
 
-    <title>EA:Ragnarök</title>
+    <title>EA:Apocalypse</title>
 </head>
 <body>
 
@@ -30,7 +30,7 @@
             <a class="nav-link" href="/content/rules.html">Rules</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/content/armies.html">Armies</a>
+            <a class="nav-link" href="/content/armies.html?filter=all">Armies</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/content/scenarios.html">Scenarios</a>
