--- a/content/armies.html
+++ b/content/armies.html
@@ -51,7 +51,7 @@
 
         $("#list-filter").append(filter);
 
-        $.getJSON("lists/index2.json", function (data) {
+        $.getJSON("lists/index.json", function (data) {
             var filtered = data;
             console.log(data);
 
