--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         else
         {
             console.info("Redirecting to site");
-            window.location.replace("/tmp.html");
+            window.location.replace("/site.html");
         }
     });
 </script>
