Written scenarios ar HTML

--- a/content/scenarios.html
+++ b/content/scenarios.html
@@ -1,2 +1,33 @@
 <h2>Scenarios</h2>
-<p>TODO</p>
+<p>The EA-Apocalypse tournament game rules are designed to be used in conjunction with the EA-Apocalypse army lists.
+    They will allow two players to fight an evenly balanced battle with little or no preparation.</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3 d-none d-lg-block">&nbsp</div>
+        <div class="col-sm-4 col-lg-2 text-center" style="margin-top: 15px">
+            <a href="/content/scenarios/battleline.html">
+                <img class="img-responsive 	d-none d-sm-block" style="width:100%"
+                     src="/website/img/Scenario_Battle.jpg"/>
+                Battle Line
+            </a>
+        </div>
+        <div class="col-sm-4 col-lg-2 text-center" style="margin-top: 15px">
+            <a href="/content/scenarios/fire.html">
+                <img class="img-responsive 	d-none d-sm-block" style="width:100%"
+                     src="/website/img/Scenario_Beacons.jpg"/>
+                Fire the Beacons
+                <br class="d-none d-sm-inline">
+                <i>beta</i>
+            </a>
+        </div>
+        <div class="col-sm-4 col-lg-2 text-center" style="margin-top: 15px">
+            <a href="/content/scenarios/fog.html">
+                <img class="img-responsive 	d-none d-sm-block" style="width:100%"
+                     src="/website/img/Scenario_Fog.jpg"/>
+                Fog of War
+                <br class="d-none d-sm-inline">
+                <i>beta</i>
+            </a>
+        </div>
+    </div>
+</div>
