--- a/site.html
+++ b/site.html
@@ -24,7 +24,7 @@
     </div>
     <ul class="nav nav-pills justify-content-center">
         <li class="nav-item">
-            <a class="nav-link active" href="/content/intro.html">About</a>
+            <a class="nav-link" href="/content/intro.html">About</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/content/rules.html">Rules</a>
