Trying to fix broken links on GH pages

--- a/site.html
+++ b/site.html
@@ -24,16 +24,16 @@
     </div>
     <ul class="nav nav-pills justify-content-center">
         <li class="nav-item">
-            <a class="nav-link" href="/content/intro.html">About</a>
+            <a class="nav-link" href="content/intro.html">About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/content/rules.html">Rules</a>
+            <a class="nav-link" href="content/rules.html">Rules</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/content/armies.html?filter=all">Armies</a>
+            <a class="nav-link" href="content/armies.html?filter=all">Armies</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/content/scenarios.html">Scenarios</a>
+            <a class="nav-link" href="content/scenarios.html">Scenarios</a>
         </li>
     </ul>
 
