Fixed more links

--- a/content/armies.html
+++ b/content/armies.html
@@ -14,10 +14,10 @@
                 <span id="list-filter">Filter: </span>
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="/content/armies.html?filter=approved">Approved</a>
-                <a class="dropdown-item" href="/content/armies.html?filter=beta">Beta+</a>
-                <a class="dropdown-item" href="/content/armies.html?filter=alpha">Alpha+</a>
-                <a class="dropdown-item" href="/content/armies.html?filter=all">All lists</a>
+                <a class="dropdown-item" href="content/armies.html?filter=approved">Approved</a>
+                <a class="dropdown-item" href="content/armies.html?filter=beta">Beta+</a>
+                <a class="dropdown-item" href="content/armies.html?filter=alpha">Alpha+</a>
+                <a class="dropdown-item" href="content/armies.html?filter=all">All lists</a>
             </div>
         </div>
     </div>
