--- a/content/armies.html
+++ b/content/armies.html
@@ -1,10 +1,10 @@
 <h2>Armies</h2>
 <div class="row">
     <div class="col" style="line-height: 1.0">
-        <b>Approved</b> - Tournament ready and balanced against one another<br>
+        <b>Approved</b> - Tournament ready and balanced<br>
         <b>Beta</b> - Currently being tested for approval<br>
-        <b>Alpha</b> - New list wo none or limited testing<br>
-        <b>Experimental</b> - An idea for a list that has never been tested
+        <b>Alpha</b> - Awaiting testing. Might experience significant rework<br>
+        <b>Experimental</b> - Experiments and Fanlists. Suitable for casual play
     </div>
     <div class="col-2">
         <div class="dropdown">
